--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,88 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.schema-editor {
+  display: block;
+  border-radius: 5px;
+  height: 500px;
+  width: 800px;
+  background: whitesmoke;
+  position: relative;
+  user-select: none;
+  overflow: hidden;
+}
+
+.schema-unit{
+  position: absolute;
+  display: block;
+  border-radius: 5px;
+  opacity: 0.95;
+  display: block;
+  cursor: default;
+  overflow: hidden;
+  text-align: center;
+}
+
+.text-schema-unit{
+  background-color: #444;
+  text-align: center;
+  color: #fff;
+  display: block;
+  padding: 2px 10px;
+}
+
+.start-schema-unit{
+  background-color: #d6d6d6;
+  text-align: center;
+  color: #000;
+  border-radius: 2px;
+  padding: 5px 15px;
+  display: block;
+}
+
+.if-schema-unit{
+  background-color: #46a35e;
+  text-align: center;
+  color: #fff;
+  display: block;
+  padding: 2px 10px;
+}
+
+
+.do-schema-unit{
+  background-color: #f44336;
+  text-align: center;
+  color: #fff;
+  display: block;
+  padding: 2px 10px;
+}
+
+
+
+.grid {
+  margin: 50px auto;
+  box-shadow: 1px 1px 3px #333333;
+  background-color: #3A78A1;
+  background-image:
+    linear-gradient(#83ABC4 1px, transparent 1px),
+    linear-gradient(90deg, #83ABC4 1px, transparent 1px),
+    linear-gradient(#3A78A1 1px, transparent 1px),
+    linear-gradient(90deg, #3A78A1 1px, transparent 1px),
+    linear-gradient(#4E86AB 1px, transparent 1px),
+    linear-gradient(90deg, #4E86AB 1px, transparent 1px);
+  background-size:
+    100px 100px,
+    100px 100px,
+    5px 5px,
+    5px 5px,
+    20px 20px,
+    20px 20px;
+  background-position:
+    -1px -1px,
+    -1px -1px,
+    0 0,
+    0 0,
+    -1px -1px,
+    -1px -1px;
+}
