--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,16 +12,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   position: relative;
   user-select: none;
   overflow: hidden;
+  margin: 50px auto;
 }
 
 .schema-unit{
   position: absolute;
-  display: block;
   border-radius: 5px;
   opacity: 0.95;
   display: block;
   cursor: default;
-  overflow: hidden;
   text-align: center;
 }
 
@@ -60,14 +59,30 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 
+.schema-editor-svg{
+  position: absolute;
+  top: 0;
+  left:0;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.schema-editor-svg line{
+  stroke: #fff;
+}
+
+
 
 .grid {
-  margin: 50px auto;
+  //margin: 50px auto;
   box-shadow: 1px 1px 3px #333333;
   background-color: #3A78A1;
   background-image:
-    linear-gradient(#83ABC4 1px, transparent 1px),
-    linear-gradient(90deg, #83ABC4 1px, transparent 1px),
+    //linear-gradient(#83ABC4 1px, transparent 1px),
+    linear-gradient(rgb(131 171 196 / 52%) 1px, transparent 1px),
+    linear-gradient(90deg, rgb(131 171 196 / 52%) 1px, transparent 1px),
     linear-gradient(#3A78A1 1px, transparent 1px),
     linear-gradient(90deg, #3A78A1 1px, transparent 1px),
     linear-gradient(#4E86AB 1px, transparent 1px),
